MODON MRE BPDEV/force-app/main/default/objects/ObjectField__mdt/ObjectField__mdt.object-meta.xml
<CustomObject>
    <label>SObject Field</label>
    <pluralLabel>Object Fields</pluralLabel>
</CustomObject>