MODON MRE BPDEV/force-app/main/default/objects/ObjectField__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>