MODON MRE BPDEV/force-app/main/default/objects/ObjectField__mdt/fields/RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Name__c</fullName>
    <label>RecordType Name</label>
    <type>TextArea</type>
</CustomField>