MODON MRE BPDEV/force-app/main/default/objects/ObjectField__mdt/fields/Related_Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Related_Field_API_Names__c</fullName>
    <label>Optional Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>