MODON MRE BPDEV/force-app/main/default/objects/ObjectField__mdt/fields/Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields__c</fullName>
    <label>Required Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>